Added a portal to load the sidebar component outside the child

--- a/src/styling/_general.scss
+++ b/src/styling/_general.scss
@@ -24,3 +24,11 @@ body {
     left: 0;
   }
 }
+
+.container {
+  &.vcentered {
+    height: 100vh;
+    display: flex;
+    align-items: center;
+  }
+}
