--- a/src/styling/_sidebar.scss
+++ b/src/styling/_sidebar.scss
@@ -4,10 +4,18 @@
   right: 0;
   width: 30rem;
   min-height: 100vh;
-  background-color: green;
+  background-color: white;
   display: none;
 
   &.active {
     display: block;
+  }
+}
+
+.sidebar-container {
+  color: black;
+
+  .sidebar-meta * {
+    color: inherit;
   }
 }
