--- a/src/styling/index.scss
+++ b/src/styling/index.scss
@@ -1,4 +1,8 @@
-@import 'variables';
+
+@import "node_modules/slick-carousel/slick/slick.scss";
+// @import "node_modules/slick-carousel/slick/slick-theme.scss";
+
+@import "variables";
 @import 'general';
 @import 'media';
 @import 'sidebar';
