--- a/src/styling/_sidebar.scss
+++ b/src/styling/_sidebar.scss
@@ -1,7 +1,7 @@
 #sidebar {
   position: fixed;
   top: 0;
-  right: -100vw;
+  right: -100%;
   width: 30rem;
   min-height: 100vh;
   background-color: white;
