--- a/src/styling/_media.scss
+++ b/src/styling/_media.scss
@@ -1,4 +1,5 @@
 .media {
+  width: 100%;
   > .subtitle,
   > .title {
     @include until($tablet) {
@@ -16,6 +17,7 @@
   }
 
   .card {
+    // width: 30%;
     &:hover {
       cursor: pointer;
 
