Final touches on mobile

--- a/src/styling/_variables.scss
+++ b/src/styling/_variables.scss
@@ -25,3 +25,5 @@ $subtitle-color: $body-color;
 
 @import "node_modules/bulma/sass/components/card.sass";
 @import "node_modules/bulma/sass/layout/section.sass";
+
+// @import ;
