--- a/src/styling/_media.scss
+++ b/src/styling/_media.scss
@@ -9,10 +9,17 @@
 
   > .level {
     margin-bottom: 8rem;
-    max-width: 80%;
+    max-width: 90%;
+    margin-left: auto;
+    margin-right: auto;
 
     @include from($tablet) {
       max-width: 52%;
+    }
+  }
+  .columns {
+    @include until($tablet) {
+      margin: 0;
     }
   }
 
@@ -31,14 +38,19 @@
       position: relative;
 
       .image {
-        position: relative;
-
+        height: 200px;
         @include from($desktop) {
           height: 135px;
         }
+
+        @include until($tablet) {
+          height: 350px;
+        }
         &:before {
           transition: all ease-in .25s;
-          content: "";
+          @include from($tablet){
+            content: "";
+          }
           width: 100%;
           height: 100%;
           background: rgba(0,0,0,.7);
@@ -72,10 +84,14 @@
         }
       }
       .title {
-        font-size: .95rem;
+        @include from($tablet) {
+          font-size: .95rem;
+        }
       }
       .subtitle {
-        font-size: .8rem;
+        @include from($tablet) {
+          font-size: .8rem;
+        }
       }
       padding-left: 0;
       padding-right: 0;
@@ -84,8 +100,12 @@
 }
 
 .icon-holder {
-  display: flex;
   justify-content: flex-end;
+  display: none;
+
+  @include from($tablet) {
+    display: flex;
+  }
 
   i {
     outline: none;
@@ -93,5 +113,11 @@
     &:first-child {
       margin-right: 1rem;
     }
+  }
+}
+
+.ant-carousel {
+  .slick-dots-top {
+    top: -20px;
   }
 }
